coloured link card in css

--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
   <meta charset="utf-8">
   <title>Dung Beetle</title>
-  <link href="main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Dosis:700" rel="stylesheet">
 </head>
 <body>
-<a href="#"><h1>Dung Beetle</h1>
-  <div class="copy">
+<a class="link-card" href="http://www.wikipedia.org"><h1>Dung Beetle</h1>
+  <p class="copy">
     Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.
-  </div>
-  <div class="taxonomy">
+  </p>
     <dl>
-      <dd>Kingdom:</dd><dt>Animalia</dt>
-      <dd>Phylum:</dd><dt>Arthropoda</dt>
-      <dd>Class:</dd><dt>Insecta</dt>
-      <dd>Order:</dd><dt>Coleoptera</dt>
-      <dd>Suborder:</dd><dt>Polyphaga</dt>
-      <dd>Superfamily:</dd><dt>Scarabaeoidea</dt>
-      <dd>Family:</dd><dt>Scarabidae</dt>
+      <dd>Kingdom</dd><dt>Animalia</dt>
+      <dd>Phylum</dd><dt>Arthropoda</dt>
+      <dd>Class</dd><dt>Insecta</dt>
+      <dd>Order</dd><dt>Coleoptera</dt>
+      <dd>Suborder</dd><dt>Polyphaga</dt>
+      <dd>Superfamily</dd><dt>Scarabaeoidea</dt>
+      <dd>Family</dd><dt>Scarabidae</dt>
     </dl>
-  </div>
   <div class="btn">
     Learn more...
   </div>
